// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en 1`] = `
<Layout
  lang="en"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="en"
    meta={Array []}
    title="About | Smart Contract Programmer"
  />
  <Header>
    About
  </Header>
  <div>
    contact
    <span>
      @
    </span>
    smartcontractprogrammer.com
  </div>
  <a
    href="https://twitter.com/ProgrammerSmart"
    rel="noopener noreferrer"
    target="__blank"
  >
    Twitter
  </a>
  <br />
  <a
    href="https://github.com/t4sk"
    rel="noopener noreferrer"
    target="__blank"
  >
    GitHub
  </a>
</Layout>
`;

exports[`jp 1`] = `
<Layout
  lang="jp"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="jp"
    meta={Array []}
    title="概要 | Smart Contract Programmer"
  />
  <Header>
    概要
  </Header>
  <div>
    contact
    <span>
      @
    </span>
    smartcontractprogrammer.com
  </div>
  <a
    href="https://twitter.com/ProgrammerSmart"
    rel="noopener noreferrer"
    target="__blank"
  >
    Twitter
  </a>
  <br />
  <a
    href="https://github.com/t4sk"
    rel="noopener noreferrer"
    target="__blank"
  >
    GitHub
  </a>
</Layout>
`;
